[package]
name = "muma"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.4", features=["derive"]}
thiserror = "1.0.58"
colored = "2.1.0"
serde = { version = "1.0.198", features = ["derive"] }
once_cell = "1.19.0"
bimap = "0.6.3"
toml = "0.8.12"
chrono = { version = "0.4.38", features = ["serde"] }
